updated as per latest changes

--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -3,6 +3,10 @@
   items:
     - name: Benefits
       href: ./benefits.md
+    - name: Users
+      href: ./users.md
+    - name: FAQ
+      href: ./faq.md
 - name: Architecture
   href: ./architecture.md
   items:
