--- a/manifest.json
+++ b/manifest.json
@@ -1680,7 +1680,19 @@
       "output": {
         ".html": {
           "relative_path": "home/overview.html",
-          "hash": "t/d0f/J56szXKot5BkuoOQ=="
+          "hash": "eV4XqWJvFxPdHF8p1UWDyg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/techguides/environment-creation-in-paas.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/environment-creation-in-paas.html",
+          "hash": "Pj6KeC6YTH1Zln4kWecY8A=="
         }
       },
       "is_incremental": false,
@@ -3194,7 +3206,7 @@
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "dWrVE5uHurZdVMptM8yt6w=="
+          "hash": "SLk91UUIk6poRq1dt/AFQw=="
         }
       },
       "is_incremental": false,
