--- a/manifest.json
+++ b/manifest.json
@@ -1680,7 +1680,19 @@
       "output": {
         ".html": {
           "relative_path": "home/overview.html",
-          "hash": "eV4XqWJvFxPdHF8p1UWDyg=="
+          "hash": "eIPi7Rz0N4QbOaiu8Nt98A=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/support.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/support.html",
+          "hash": "T9smDRrojHTx2dLIKnhq4g=="
         }
       },
       "is_incremental": false,
@@ -3206,7 +3218,7 @@
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "SLk91UUIk6poRq1dt/AFQw=="
+          "hash": "8TFhLT7GgZu/349nRTbtIQ=="
         }
       },
       "is_incremental": false,
@@ -3219,6 +3231,18 @@
         ".html": {
           "relative_path": "home/users.html",
           "hash": "36Gk7sIvsj436huKURZcSA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/what-is-devx.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/what-is-devx.html",
+          "hash": "MuEyY0/jU8hYNayub1DI0A=="
         }
       },
       "is_incremental": false,
@@ -3241,7 +3265,7 @@
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "Gob1/E392+U9DCoxCOC6jg=="
+          "hash": "kr4eGnQ7W3p44ucxGSyVuA=="
         }
       },
       "is_incremental": false,
