--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -1,4 +1,4 @@
-- name: What is Temenos Cloud DevX Platform?
+- name: What is Temenos Cloud DevX?
   href: ./overview.md
 - name: Architecture
   href: ./architecture.md
