--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -22,3 +22,5 @@
      href: ./techguides/troubleshooting.md
 - name: Getting Support
   href: ./support.md
+- name: Legal and Other Items
+  href: ./Legal.md
