--- a/manifest.json
+++ b/manifest.json
@@ -1048,6 +1048,281 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-add-credentials.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-add-credentials.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-build.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-build.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-built-on.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-built-on.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-change-password.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-change-password.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-coffee.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-coffee.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-configure.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-configure.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-created-environment.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-created-environment.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-credentials-check.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-credentials-check.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-credentials.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-credentials.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-dashboard.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-dashboard.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-environment-fields.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-environment-fields.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-login.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-login.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-new-environment.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-new-environment.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-pipeline-build.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-pipeline-build.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-pipeline.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-pipeline.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-portal-login.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-portal-login.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-promote-changes.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-promote-changes.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-promote-pipelines-flow.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-promote-pipelines-flow.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-promote-screen.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-promote-screen.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-putty.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-putty.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-script-path.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-script-path.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-start-job.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-start-job.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-user-id.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-user-id.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-build-views.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-build-views.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/jenkins-save-private-key.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/jenkins-save-private-key.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/load-putty-key.png",
       "output": {
         "resource": {
@@ -1763,6 +2038,21 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
+      "type": "Conceptual",
+      "source_relative_path": "home/techguides/jenkins-build-promote-pipelines.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/jenkins-build-promote-pipelines.html",
+          "hash": "RkH8GCaAEI1VIGBcPH1boA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "home/techguides/t24-development.md",
       "output": {
@@ -1902,6 +2192,16 @@
         "incrementalPhase": "build"
       },
       "processors": {
+        "RestApiDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
         "ConceptualDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build"
@@ -1913,16 +2213,6 @@
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
-        "RestApiDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
