--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
       "output": {
         ".html": {
           "relative_path": "home/Legal.html",
-          "hash": "Ho1pKz5j8T0Mi5kHuXrgNw=="
+          "hash": "48GsCur0NouTfP1YWHgEsg=="
         }
       },
       "is_incremental": false,
@@ -197,6 +197,28 @@
       "version": ""
     },
     {
+      "type": "Resource",
+      "source_relative_path": "home/scripts/functionToTriggerOnSelect.js",
+      "output": {
+        "resource": {
+          "relative_path": "home/scripts/functionToTriggerOnSelect.js"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/scripts/getTemplates.js",
+      "output": {
+        "resource": {
+          "relative_path": "home/scripts/getTemplates.js"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "home/support.md",
       "output": {
@@ -215,6 +237,18 @@
         ".html": {
           "relative_path": "home/techguides/add-app-endpoint.html",
           "hash": "T4cUXAMizRXEN7tn/lkcAQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/techguides/customize-templates.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/customize-templates.html",
+          "hash": "y+uG7JyCU3SN8EyAMd5eZw=="
         }
       },
       "is_incremental": false,
@@ -403,6 +437,83 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/app_endp8.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/boost_env1.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/boost_env1.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/boost_env2.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/boost_env2.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/boost_env3.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/boost_env3.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/boost_env4.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/boost_env4.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/boost_env5.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/boost_env5.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/boost_env6.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/boost_env6.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/boost_env7.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/boost_env7.png"
         }
       },
       "is_incremental": false,
@@ -2235,7 +2346,7 @@
       "output": {
         ".html": {
           "relative_path": "home/temenos-cloud-templates.html",
-          "hash": "khJ4RiBo7GLIr3+nWDoIzA=="
+          "hash": "UHRHGCp0TS7eMNp3JmUs3A=="
         }
       },
       "is_incremental": false,
@@ -2247,7 +2358,7 @@
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "OTk1a09HLpg2fTfg3yLxpw=="
+          "hash": "xtaMDpFjHh0pL5IVuiPv0g=="
         }
       },
       "is_incremental": false,
@@ -2321,14 +2432,19 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
@@ -2337,11 +2453,6 @@
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
-          "incrementalPhase": "build"
-        },
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
