updated troubleshooting, added video tutorials section

--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -28,3 +28,9 @@
   href: ./techguides/troubleshooting.md
 - name: Getting Support
   href: ./support.md
+- name: Video Tutorials
+  items:
+    - name: Jenkins Build Demo
+      href: ./jenkins-build-video.md
+    - name: Create and Manage Dev Enviroment Demo
+      href: ./create-dev-env-video.md
