--- a/manifest.json
+++ b/manifest.json
@@ -41,6 +41,18 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "home/create-dev-env-video.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/create-dev-env-video.html",
+          "hash": "iMMdHkC8+iUMECLdJdNvjA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "home/faq.md",
       "output": {
         ".html": {
@@ -179,6 +191,18 @@
         ".html": {
           "relative_path": "home/index.html",
           "hash": "iZ7GK38vC7+UVTXaYMG6hA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/jenkins-build-video.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/jenkins-build-video.html",
+          "hash": "EnTJbzI+850qgENeIC1XHw=="
         }
       },
       "is_incremental": false,
@@ -2398,7 +2422,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/troubleshooting.html",
-          "hash": "0nUdnp63evUdlNy9zT8yxQ=="
+          "hash": "rBquZoaJszFFop73OcaAjA=="
         }
       },
       "is_incremental": false,
@@ -2446,7 +2470,7 @@
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "tQ2/UBxEl9wu6IRQP9Am4g=="
+          "hash": "0CITStllIwbaTlX1T5JIfQ=="
         }
       },
       "is_incremental": false,
@@ -2520,14 +2544,19 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
+        "ResourceDocumentProcessor": {
           "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
@@ -2536,11 +2565,6 @@
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
-          "incrementalPhase": "build"
-        },
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
