--- a/manifest.json
+++ b/manifest.json
@@ -50,11 +50,35 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "home/cloud-environments-customize-templates.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/cloud-environments-customize-templates.html",
+          "hash": "OaFcXU2RWY/tE1EDttZqMg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "home/create-dev-env-video.md",
       "output": {
         ".html": {
           "relative_path": "home/create-dev-env-video.html",
           "hash": "B85FvXNkYoA97Dbj6J3swg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/export-import-database-video.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/export-import-database-video.html",
+          "hash": "GMaq1sbubgK9NgHOP+7/1Q=="
         }
       },
       "is_incremental": false,
@@ -2490,7 +2514,7 @@
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "yP9sCnPXmwaobtz8pKtCeg=="
+          "hash": "RbBsJ9OVvvqCEZcbtzQuyA=="
         }
       },
       "is_incremental": false,
@@ -2569,16 +2593,16 @@
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "ManagedReferenceDocumentProcessor": {
-          "can_incremental": false,
-          "incrementalPhase": "build"
-        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
+          "can_incremental": false,
+          "incrementalPhase": "build"
+        },
+        "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build"
         },
